--- a/github/HTML/index.html
+++ b/github/HTML/index.html
@@ -35,7 +35,12 @@
             line-height: 1.5;
             margin-bottom: 10px;
         }
-
+        .about-content strong{
+            font-size: 20px;
+            color: black; 
+            line-height: 1.5;
+            margin-bottom: 10px;
+        }
         
         .second-paragraph {
             background-color:black; 
@@ -221,6 +226,14 @@
             </form>
         </div>
     </section>
+    <section id="about">
+        <div class="about-content">
+            <h2>Our offices</h2>
+        <strong>Phase-5(V),Sector-6(VI),Madurawada,Visakhapatnam.530001</strong></br>
+        </br>
+        <strong>Parel,Santacruz(East),Churchgate,Navi Mumbai,Mumbai.400001</strong>
+            </div>
+            </section>
     <footer>
         <h4>&copy; 2023 LMS For Smart School. All rights reserved.</h4>
     </footer>
