--- a/github/HTML/index.html
+++ b/github/HTML/index.html
@@ -229,9 +229,14 @@
     <section id="about">
         <div class="about-content">
             <h2>Our offices</h2>
-        <strong>Phase-5(V),Sector-6(VI),Madurawada,Visakhapatnam.530001</strong></br>
+        <strong>Phase-5(V),Sector-6(VI),Madhurawada,Visakhapatnam.530001</strong></br>
         </br>
-        <strong>Parel,Santacruz(East),Churchgate,Navi Mumbai,Mumbai.400001</strong>
+        <strong>Parel,Santacruz(East),Churchgate,Navi Mumbai,Mumbai.400001</strong></br>
+		<strong>Overseas:   </br>
+			Area 51,Mount Andes Soly,Mount Rushmore(Alphs),San Francisco,America,USA,LA.94108
+		  
+		</strong>
+		
             </div>
             </section>
     <footer>
