--- a/github/HTML/index.html
+++ b/github/HTML/index.html
@@ -232,8 +232,8 @@
         <strong>Phase-5(V),Sector-6(VI),Madhurawada,Visakhapatnam.530001</strong></br>
         </br>
         <strong>Parel,Santacruz(East),Churchgate,Navi Mumbai,Mumbai.400001</strong></br>
-		<strong>Overseas:   </br>
-			Area 51,Mount Andes Soly,Mount Rushmore(Alphs),San Francisco,America,USA,LA.94108
+		<h2>Overseas:   </br></h2>
+			<strong>Area 51,Mount Andes Soly,Mount Rushmore,Nazca Lines,San Francisco,America,USA,LA.94108
 		  
 		</strong>
 		
